tests/paczka1/fuzzy1/24163901.err
Error in line 9: A/34 S137 81,0
Error in line 13: KnHHkCtrrHP A634 56,3
Error in line 14: KnHHkCtrrHP S307 84,1
Error in line 8: F7dypnw S307 0,8
Error in line 15: A634 S137 223,6
Error in line 25: A634 A634 77,0
Error in line 24: KnHHkCtrrHP A835 38,3
